fixed page alignment

--- a/portfolio/src/styles/Header.css
+++ b/portfolio/src/styles/Header.css
@@ -1,5 +1,5 @@
 .header {
-    width: 100%;
+    width: 95%;
     padding: 1%;
     display: flex;
     align-items: baseline;
